# SilkRouteHelper-1

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md  test_google_vision.py  test_upload.py
attached_assets/: Pasted--SilkRouteHelper-1-Technical-Analysis-Debugging-Report-Executive-Summary-After-comprehen-1751850357624_1751850357626.txt  Pasted-1-The-Core-Concept-The-Template-The-heart-of-your-system-is-the-Template-A-template-is-a-digital-1750681306289_1750681306290.txt  Pasted-Absolutely-Let-s-create-a-completely-versatile-domain-agnostic-system-that-can-be-configured-for-a-1751126155711_1751126155712.txt  Pasted-Based-on-the-provided-documents-the-user-flow-for-the-SilkRoute-OS-Declaration-Helper-MVP-is-design-1750584070287_1750584070288.txt  Pasted-Based-on-this-comprehensive-analysis-of-your-SilkRoute-OS-Declaration-Helper-I-can-see-you-have-a-s-1750849439446_1750849439449.txt  Pasted-Codebase-Structure-Create-the-following-directory-and-file-structure-This-separates-concerns-and--1750579447054_1750579447055.txt  Pasted-DeclarationTemplateEditor-tsx-140-Uncaught-TypeError-Cannot-read-properties-of-undefined-reading--1750692299565_1750692299568.txt  Pasted-Explanation-Understanding-the-problem-This-error-message-indicates-that-the-server-rejected-a-re-1750744521795_1750744521796.txt  Pasted-Initialize-Backend-backend-Create-a-requirements-txt-file-with-fastapi-uvicorn-sqlalchemy-psy-1750581298327_1750581298329.txt  Pasted-queryClient-ts-38-GET-https-806b340e-66b4-48c5-a0b3-f0b37d6e-1750691723332_1750691723334.txt  (+19 more)
(+85 files in other folders)
